Fixed Mobile Spacing Issue

--- a/css/index_styling.css
+++ b/css/index_styling.css
@@ -265,7 +265,7 @@ h3>a:link{
         padding: 0px 20px 0px 20px;
     }
     .assignment9{
-        width: 550px;
+        width: 100%;
         margin: 0 auto;
       }
 }
